<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/sky_blue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/value1field_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value1field_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/value_enter_text_size"
            android:fontFamily="serif" />

        <EditText
            android:id="@+id/value1field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/value1field_text"
            android:layout_alignStart="@+id/value1field_text"
            android:layout_alignLeft="@+id/value1field_text"
            android:layout_marginStart="81dp"
            android:layout_marginLeft="81dp"
            android:hint="Enter a Number..."
            android:inputType="numberSigned|numberDecimal" />
    </RelativeLayout>

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/value2field_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value2field_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/value_enter_text_size"
            android:fontFamily="serif"/>

        <EditText
            android:id="@+id/value2field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/value2field_text"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/value2field_text"
            android:hint="Enter a Number..."
            android:inputType="numberSigned|numberDecimal" />
    </RelativeLayout>

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/operator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/value_enter_text_size" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/operator_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="calculateResult"
            android:text="@string/calculate_button_text"
            android:textColor="@android:color/black"
            android:background="@color/orange"
            android:textSize="@dimen/value_enter_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/result_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/value_enter_text_size"
            android:paddingRight="50sp"
            android:text="@string/result_text" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/result_text_label"
            android:textSize="@dimen/value_enter_text_size"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/result_text_label"  />
    </RelativeLayout>
</LinearLayout>


